--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,8 @@
 	"semi": true,
 	"quoteProps": "as-needed",
 	"bracketSpacing": true,
-	"arrowParens": "always"
+	"arrowParens": "always",
+	"plugins": [
+		"prettier-plugin-tailwindcss"
+	]
 }
